# strata

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  vite.config.ts
.github/: FUNDING.yml
docs/: index.html
scripts/: capture-demo.mjs  make-dmg.sh  shoot.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  export.rs  extract.rs  lib.rs  main.rs  models.rs  pg.rs  secrets.rs  telemetry.rs
src-tauri/tests/: ai_smoke.rs  pg_integration.rs
src/components/: ChartPanel.tsx  CommandPalette.tsx  ConnectionDialog.tsx  ConnectionPicker.tsx  DataGrid.tsx  DatabasePicker.tsx  ExportMenu.tsx  PlanView.tsx  Sidebar.tsx  ui.tsx
src/lib/: api.ts  chart.ts  demo.ts  export.ts  format.ts  hooks.ts  icons.tsx  types.ts  update.ts
src/views/: Agent.tsx  Browse.tsx  Monitor.tsx  Query.tsx  Schema.tsx  Settings.tsx
