[package]
name = "strata"
version = "1.5.0"
description = "Strata — a native Postgres data browser"
authors = ["Strata"]
edition = "2021"

[lib]
name = "strata_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
postgres-native-tls = "0.5"
native-tls = "0.2"
parking_lot = "0.12"
window-vibrancy = "0.5"
keyring = { version = "3", features = ["apple-native"] }
tauri-plugin-dialog = "2.7.1"
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
